--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
+    <style>
+        
+    </style>
 
     <title>Eric Galassi</title>
   </head>
@@ -32,9 +35,11 @@
             </div>
         </nav>
     
-    <h1>About Me</h1>
+    <div class="container">
+        <h1>About Me</h1>
+    </div>
 
-    <div>
+    <div class="container-fluid">
         <img src="assets/images/P5.jpg" height="150px" width="120px" alt="Photo of myself"/>
         <p>I originally grew up in the San Francisco Bay Area.  I went to college for my undergraduate in biology from UC San Diego, then received my master's degree in marine biology from San Francisco State University.  After a brief career as a biologist, I decided that I would prefer a career that I could take pride in.  I chose to serve in the US Navy as a submarine officer for several years.  I was stationed around the country before separating from the Navy while living in Hawaii.  After leaving the Navy I began working as a recruiter, and then a mortgage loan officer.  When I decided that the field of sales was not my desire, I became a science teacher.  I taught high school chemistry and physics.</p>
         <p>I currently live in Texas with my wife and son.  My hobbies include baking, archery, and designing websites, but most of my time is enjoyed with my family.</p>
