--- a/portfolio.html
+++ b/portfolio.html
@@ -9,6 +9,11 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
 
     <title>Eric Galassi</title>
+
+    <style>
+        
+    </style>
+
   </head>
   <body>
 
@@ -32,8 +37,23 @@
             </div>
         </nav>
     
-    <h1>Portfolio</h1>
+    <div class="container">
+        <h1>Portfolio</h1>
+    </div>
 
+    <div class="container">
+        <div class="row">
+            <img class="placeholder" src="http://via.placeholder.com/350x250" href="#">
+            <img class="placeholder" src="http://via.placeholder.com/350x250" href="#">
+        </div>
+        <div class="row">
+            <img class="placeholder" src="http://via.placeholder.com/350x250" href="#">
+            <img class="placeholder" src="http://via.placeholder.com/350x250" href="#">
+        </div>
+        <div class="row">
+            <img class="placeholder" src="http://via.placeholder.com/350x250" href="#">
+        </div>   
+    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
