--- a/contact.html
+++ b/contact.html
@@ -11,51 +11,135 @@
     <title>Eric Galassi</title>
 
     <style>
-        
+        body {
+            background-image: url("assets/images/concrete-texture.png");
+        }
+
+        p {
+            font-size: 16px;
+            line-height: 1.5em;
+            padding-right: 15px;
+            padding-left: 15px;
+        }
+
+        div, form {
+            font-family: "Arial", "Helvetica Neue", Helvetica, sans-serif;
+        }
+
+        h1 {
+            font-family: Georgia, 'Times New Roman', Times, serif;
+            padding: 15px;
+            color: #4aaaa5;
+        }
+
+        footer {
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+            text-align: right;
+            padding: 10px;
+            background-color: #666666;
+            border-top: 3px solid #4aaaa5;
+            color: white;
+        }
+
+        .main-area {
+            background-color: #ffffff;
+            color: #777777;
+            clear: both;
+            margin-bottom: 80px;
+            width: 960px;
+            padding: 15px;
+        }
+
+        .navbar {
+            background-color: #ffffff !important;
+            z-index: 3;
+            width: 100%;
+            border-bottom:  1px solid #dddddd;
+        }
+
+        #navbarNav {
+            text-align: right;
+            background-color: #ffffff;
+            border-color: #cccccc;
+            color: #777777;
+            position: absolute !important;
+            right: 15% !important;
+            top: 25%;
+        }
+
+        .navbar-brand {
+            color: white !important;
+            font-size: 36px;
+            font-family: Georgia, 'Times New Roman', Times, serif;
+            background-color: #4aaaa5;
+            margin-top: 0 auto !important;
+            margin-left: 15%;
+            padding: 12px;
+            height: 100% !important;
+        }
+
+        .navbar-items {
+            width: 960px;
+        }
     </style>
 
   </head>
   <body>
 
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">Eric Galassi</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="portfolio.html">Portfolio</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Contact <span class="sr-only">(current)</span></a>
-                    </li>
-                </ul>
+            <div class="navbar-items">
+                <a class="navbar-brand" href="#">Eric Galassi</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="index.html">About </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link">|</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="portfolio.html">Portfolio </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link">|</a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">Contact <span class="sr-only">(current)</span></a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </nav>
+        <br>
     
-    <div class="container">
+    <div class="main-area container">
         <h1>Contact</h1>
-    </div>
+        <hr>
+        <br>
 
-    <form>
-        <div class="form-group">
-            <label for="exampleFormControlInput1">Name</label>
-            <input type="username" class="form-control" id="exampleFormControlInput1" placeholder="John Smith">
-        </div>
-        <div class="form-group">
+        <form>
+            <div class="form-group">
+                <label for="exampleFormControlInput1">Name</label>
+                <input type="username" class="form-control" id="exampleFormControlInput1" placeholder="John Smith">
+            </div>
+            <br>
+            <div class="form-group">
                 <label for="exampleFormControlInput1">Email</label>
                 <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="example@gmail.com">
             </div>
-        <div class="form-group">
-            <label for="exampleFormControlTextarea1"></label>
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-        </div>
-        <input class="btn btn-primary" type="submit" value="Submit">
-    </form>
+            <br>
+            <div class="form-group">
+                <label for="exampleFormControlTextarea1">Message</label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+            </div>
+            <input class="btn btn-primary" type="submit" value="Submit">
+        </form>
+    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -63,4 +147,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
   </body>
+    <footer>
+        <div>2018</div>
+    </footer>
 </html>
