--- a/index.html
+++ b/index.html
@@ -115,11 +115,11 @@
         </div>
         <hr>
         <br>
-        <div class="row">
-            <div class="col-md-2">
+        <div class="row media">
+            <div class="col-md-2 media-body p-2">
                 <img src="assets/images/P5.jpg" height="150px" width="120px" alt="Photo of myself"/>
             </div>
-            <div class="col-md-10">
+            <div class="col-md-10 media-body">
                 <p>I originally grew up in the San Francisco Bay Area.  I went to college for my undergraduate in biology from UC San Diego, then received my master's degree in marine biology from San Francisco State University.  After a brief career as a biologist, I decided that I would prefer a career that I could take pride in.  I chose to serve in the US Navy as a submarine officer for several years.  I was stationed around the country before separating from the Navy while living in Hawaii.  After leaving the Navy I began working as a recruiter, and then a mortgage loan officer.  When I decided that the field of sales was not my desire, I became a science teacher.  I taught high school chemistry and physics.</p>
             </div>
         </div>
