--- a/portfolio.html
+++ b/portfolio.html
@@ -117,24 +117,24 @@
             <hr>
             <br>
             <div>
-                <section class="row">
-                    <img class="placeholder col-sm-4" src="http://via.placeholder.com/350x250" href="#">
-                    <img class="placeholder col-sm-4" src="http://via.placeholder.com/350x250" href="#">
+                <section class="row media">
+                    <img class="placeholder col-sm-4 media-body" src="http://via.placeholder.com/350x250" href="#">
+                    <img class="placeholder col-sm-4 media-body" src="http://via.placeholder.com/350x250" href="#">
                     <div class="col-sm-4">
                         <!--Blank column-->
                     </div>
                 </section>
                 <br>
-                <section class="row">
-                    <img class="placeholder col-sm-4" src="http://via.placeholder.com/350x250" href="#">
-                    <img class="placeholder col-sm-4" src="http://via.placeholder.com/350x250" href="#">
+                <section class="row media">
+                    <img class="placeholder col-sm-4 media-body" src="http://via.placeholder.com/350x250" href="#">
+                    <img class="placeholder col-sm-4 media-body" src="http://via.placeholder.com/350x250" href="#">
                     <div class="col-sm-4">
                         <!--Blank column-->
                     </div>
                 </section>
                 <br>
-                <section class="row">
-                    <img class="placeholder col-sm-4" src="http://via.placeholder.com/350x250" href="#">
+                <section class="row media">
+                    <img class="placeholder col-sm-4 media-body" src="http://via.placeholder.com/350x250" href="#">
                     <div class="col-sm-4">
                         <!--Blank column-->
                     </div>
