--- a/portfolio.html
+++ b/portfolio.html
@@ -118,7 +118,7 @@
             <br>
             <div>
                 <section class="row media">
-                    <img class="placeholder col-sm-4 media-body" src="http://via.placeholder.com/350x250" href="https://ewgalassi.github.io/WordGuessGame/">
+                    <img class="placeholder col-sm-4 media-body" src="assets/images/wordguess.png" href="https://ewgalassi.github.io/WordGuessGame/">
                     <img class="placeholder col-sm-4 media-body" src="http://via.placeholder.com/350x250" href="#">
                     <div class="col-sm-4">
                         <!--Blank column-->
